--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,8 @@
     <string name="medicine_5">Medicine 5</string>
     <string name="medicine_4">Medicine 4</string>
     <string name="medicine_3">Medicine 3</string>
+    <string name="cancel">cancel</string>
+    <string name="confirm">Confirm</string>
 
     <array name="time_array">
         <item>Morning</item>
@@ -17,6 +19,15 @@
         <item>night</item>
         <item>2 times</item>
         <item>3 times</item>
+    </array>
+
+    <array name="medicine_array">
+        <item>Medicine 1</item>
+        <item>Medicine 2</item>
+        <item>Medicine 3</item>
+        <item>Medicine 4</item>
+        <item>Medicine 5</item>
+        <item>Medicine 6</item>
     </array>
 
 </resources>
