--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <array name="time_array">
         <item>Morning</item>
         <item>Afternoon</item>
-        <item>night</item>
+        <item>Night</item>
         <item>2 times</item>
         <item>3 times</item>
     </array>
